<resources>
    <string name="app_name">GoodRead</string>
    <string name="search">Type your search criteria</string>
    <string name="list">List the books</string>
    <string name="nobookfound">No books found matching your criteria</string>
    <string name="nointernet">No internet connection</string>
    <string name="rating">Rating:</string>
    <string name="ratingscounthere">ratings count here</string>
    <string name="author">Author:</string>
    <string name="list_books">List books</string>
    <string name="subject">Subject:</string>
    <string name="title">Title:</string>
    <string name="type_a_general_criteria">Type a general criteria</string>
    <string name="add_authors_here">add authors here</string>
    <string name="add_subject_here">add subject here</string>
    <string name="add_title_here">add title here</string>
</resources>
